--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Forrest Kirk | Art Portfolio</title>
+  <title>Forrest | Art Portfolio</title>
   <style>
     body {
       font-family: sans-serif;
@@ -76,7 +76,7 @@
 </head>
 <body>
   <header>
-    <h1>Forrest Kirk</h1>
+    <h1>Forrest</h1>
     <p>Contemporary Artist | Painter | Sculptor</p>
   </header>
 
@@ -104,7 +104,7 @@
       <textarea name="message" rows="5" placeholder="Your Message"></textarea>
       <button type="submit">Send</button>
     </form>
-    <p>&copy; 2025 Forrest Kirk</p>
+    <p>&copy; 2025 Forrest</p>
   </footer>
 </body>
 </html>
