--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- MOCKUP: Carrd-style Artist Portfolio Homepage for Forrest Kirk -->
+<!-- MOCKUP: Carrd-style Artist Portfolio Homepage for Forrest  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
